--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "testing-package",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "To test the conventional commits deloyment",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version"
   },
   "keywords": [
     "Test"
   ],
   "author": "Shivam Agrawal",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "standard-version": "^6.0.1"
+  }
 }
