--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "standard-version": "^6.0.1"
+  },
+  "dependencies": {
+    "@polymathnetwork/contract-wrappers": "^2.1.0-beta.5"
   }
 }
