--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testing-package",
-  "version": "1.1.7-beta.1",
+  "version": "1.1.7-beta.2",
   "description": "To test the conventional commits deloyment",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,9 @@
     "release": "standard-version",
     "postcommit": "/bin/bash ./postcommit-script.sh"
   },
-  "post-commit": ["postcommit"],
+  "post-commit": [
+    "postcommit"
+  ],
   "keywords": [
     "Test"
   ],
