--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "standard-version"
+    "release": "standard-version",
+    "postcommit": "/bin/bash ./postcommit-script.sh"
   },
+  "post-commit": ["postcommit"],
   "keywords": [
     "Test"
   ],
