--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "testing-package",
-  "version": "1.1.7-beta.16",
+  "version": "1.1.7-beta.17",
   "description": "To test the conventional commits deloyment",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "standard-version",
-    "postcommit": "/bin/bash ./postcommit-script.sh"
+    "postcommit": "/bin/bash ./postcommit-script.sh && exit 0"
   },
   "post-commit": [
     "postcommit"
