--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "./postcommit.sh",
     "release": "standard-version"
   },
-  "post-commit": [
-    "deploy"
-  ],
+  "standard-version": {
+    "scripts": {
+      "postcommit": "./postcommit.sh"
+    }
+  },
   "keywords": [
     "Test"
   ],
