--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "standard-version",
-    "deploy": "./postcommit.sh"
+    "commit": "./postcommit.sh"
   },
   "keywords": [
     "Test"
